<resources>
    <string name="app_name">Wevolve</string>
    <string name="created_by_aman">Created By Aman</string>
    <string name="join_us">Sign in</string>
    <string name="enter_your_mobile_number">Login</string>
    <string name="_91">+91</string>
    <string name="otp">OTP has been send to given Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Music</string>
    <string name="menu_slideshow">Meditational Exercise</string>
    <string name="home">Home</string>
    <string name="peaceomusic">Relaxing music</string>
    <string name="meditational_exercises">Meditational Exercises</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="get_otp">Get OTP</string>
    <string name="num">7039259385</string>
    <string name="eotpm">PLEASE REGISTER BEFORE LOGIN</string>
    <string name="daily_notes">Daily Notes</string>
    <string name="about">About</string>
    <string name="music">Music</string>
    <string name="mind">Mind</string>
    <string name="dairy">Dairy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="morning_music">   Morning Music</string>
    <string name="string_morning_music">  Morning Music</string>


</resources>