<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/peaceomusic" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/daily_notes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/alert_light_frame"
            android:title="@string/meditational_exercises" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/about" />
    </group>
</menu>