<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.peaceomind.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.peaceomind.fragments.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.peaceomind.fragments.NotesFragment"
        android:label="Notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.peaceomind.fragments.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.peaceomind.fragments.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/fragment_player"
        android:name="com.example.peaceomind.fragments.PlayerFragment"
        android:label="Music Player">
        <argument
            android:name="position"
            android:defaultValue="0"
            app:argType="integer"
            app:nullable="false" />
    </fragment>
</navigation>